--- a/Final-Report/final_report.rmd
+++ b/Final-Report/final_report.rmd
@@ -10,7 +10,7 @@ For years, policymakers have been wondering why and how do drugs travel through 
 
 "Number one is the opioid epidemic. It is a scourge across our country. A person dies every 12-and-a-half minutes from an opioid overdose and that’s far too many. Especially when we know that many of those deaths can be prevented." (4)
 
-These were the words of Dr. Adams, the 20th surgeon general of the United States when asked about his main concerns and focus indicating the severity of the matter. Substance abuse is not only harmful for one's self but our community. Multiple research articles and papers in the past have adressed model drug use. We have included some examples below from which we have taken inspiration and made commparisons.
+These were the words of Dr. Adams, the 20th surgeon general of the United States when asked about his main concerns and focus indicating the severity of the matter. Substance abuse is not only harmful for one's self but our community. Multiple research articles and papers in the past have modelled drug use. We have included some examples below from which we have taken inspiration and made comparisons.
 
 One article in particular by Mushanyu, J, Nyabadza, F, Muchatibaya, G, & Stewart, A G. R. (2016) touches on the importance of an adequate health care system since a limited rehabilitation capacity can increase the chances of a drug abuse epidemic. The methods used in this paper are discussed later.
 
@@ -78,14 +78,15 @@ SUAR(0.001,0.001,0.001, 0.01, 0.001 ,60,20,10,10,100)
 
 
 ## SUAR Model with age
-Looking at the stationary points of the previous two models (see appendix for derivation), the only long term behaviour is to either kill off the drug and have no users or addicted people or have eveyone in the addicted or recovered group. However, this behaviour is not consistent with what we see in the real world, where we have a consistent number of people using and addicted to the drug, and a consistently high number of people who are susceptible to the drug. To fix this issue we integrate age groups into the model, grouping the population as children, teens, young adults, adults and seniors. Each of these groups has a distinct rate of death and the births are proportional to the number of young adults and adults. Seperating the population also allows us to set different parameters according to each age group, capturing more nuanced behaviours such as an increased volume of experimentation of young people which would not have been identified otherwise.
+Now Focusing on the stationary points of the previous two models (see appendix for derivation) we realize that our long term behaviour involves the extinction of either the User and/or the Addicted Group. However, this behaviour is unrealistic and rather too optimistic since there is a consistent number of people using and addicted to the drug, and a consistently high number of people who are susceptible to the drug. To fix this issue we integrate age groups into the model, grouping the population into children, teens, young adults, adults and seniors. Each of these groups has a distinct rate of death and the births are proportional to the number of young adults and adults. Seperating the population also allows us to set different parameters according to each age group, capturing more nuanced behaviours such as an increased volume of experimentation of young people which would not have been identified otherwise.
 
-Another feture we wanted to tackle is how people recover. In the same way that people start using drugs based on interactions with others who are using the drug, we expect people to recover based on interactions with people who aren't using the drug. This can be represented by support groups, concered parents or friends. Furthermore, we can expect people in one agegroup to be influence by different ammoint from each agregreoup. We can store this information with a matrix $I$, where $I_{ij}$ is the magnitude of the influence that group j has on group i.
+Another feature we wanted to tackle is how people recover. In the same way that people start using drugs based on interactions with others who are using them, we expect people to recover based on interactions with people who aren't using them. This can be represented by support groups, concerned parents, friends etc. Furthermore, we can expect people in one age group and compartment model to be influenced differently from each age group and subsequent compartment model. We can store this information with a matrix $I$, where $I_{ij}$ is the magnitude of the influence that group j has on group i.
+
 We can now go in to further simplify this by defining two new terms, the positive and negitive influence on a age group $i$, to be:
 $$P_i = \sum{k=1}{5}{I_{ik} * (S_k + R_K)}$$
 $$N_i = \sum{k=1}{5}{I_{ik} * (U_k + A_K)}$$
 
-The model now has 20 compartments with both sideways movment within age groups and downwards movement as people age.
+The model now has 20 compartments with both sideways movement from and to age groups and downwards movement as people age.
 
 Looking across age group 'i', the model can be described as:
 
@@ -94,7 +95,7 @@ $$\frac{dU_i}{dt} =  aS_{i-1}\pi_{i-1,1}N_{i-1} + aU_{i-1} - U_i * \pi_{i,3} - a
 $$\frac{dA_i}{dt} = aU_{i-1}\pi_{i-1,3} + aA_{i-1} + aR_{i-1}\pi_{i-1,4}N_{i-1} - A_i\pi_{i.5}P_i + (1-a)R_i\pi_{i,4}N_{i}-aA_i + (1-a)U_i\pi_{i,3}- d_{i,A}A_i$$
 $$\frac{dR_i}{dt} = aA_{i-1}\pi_{i-1,5}P_{i-1} + aR_{i-1} - aR_i -R_i\pi_{i,4}N_i + (1-a)A_i\pi_{i,5}P_i - d_{i,R}R_I $$
 
-With the paramers being sroted in matrices $\pi$, {d} and {i}, containing row-wise versions of the parameters for the SUAR model, the death rate for each comaprtment, and the influecne each age group has on the other, and scalars $a$ and $b$, which define the aging rate and the birth rate of the population.
+With the paramers being sorted in matrices $\pi$, {d} and {i}, containing row-wise versions of the parameters for the SUAR model, the death rate for each compartment, and the influence that each age group has on the other, and scalars $a$ and $b$, which define the aging rate and the birth rate of the population.
 
 
 ```{python, echo = FALSE, SUAR_20sims, fig.show="hold", out.width="50%"  }
